kubernetes/frigate/httproute.yml
# kubectl apply -f frigate/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
  namespace: frigate
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
  hostnames:
    - frigate.nathanrahm.com
  rules:
    - backendRefs:
        - name: frigate
          port: 5000
